# VCBackend

./: README.md  deps.py  main.py  pyproject.toml
database/: models.py  utils.py
routes/: auth.py  comentarios.py  comunidades.py  notificacoes.py  playlists.py  usuarios.py  videos.py
service/: constants.py  notificacao_service.py  usuarios_service.py  videos_service.py
